--- a/chat-service/Dockerfile
+++ b/chat-service/Dockerfile
@@ -1,16 +1,17 @@
+
 # FROM node:18-alpine
 # WORKDIR /app
 # COPY package*.json ./
 # RUN npm install
 # COPY . .
 # EXPOSE 3001
-# CMD ["node", "src/server.js"]
+# CMD ["node", "server.js"]
 
 
-FROM node:18-alpine
+FROM node:20.5.0
 WORKDIR /app
 COPY package*.json ./
 RUN npm install
 COPY . .
-EXPOSE 3001
-CMD ["node", "server.js"]
+EXPOSE 3000
+CMD ["npm", "start"]
