--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,5 +20,9 @@
     "react-scripts": "^5.0.1",
     "socket.io-client": "^4.8.3",
     "web-vitals": "^5.1.0"
+  },
+  "devDependencies": {
+    "eslint": "^8.57.1",
+    "eslint-config-react-app": "^7.0.1"
   }
 }
