--- a/chat-service/package.json
+++ b/chat-service/package.json
@@ -12,6 +12,7 @@
   "description": "",
   "dependencies": {
     "@socket.io/redis-adapter": "^8.3.0",
+    "cors": "^2.8.5",
     "express": "^5.2.1",
     "mongoose": "^9.1.2",
     "redis": "^5.10.0",
