--- a/gateway/package.json
+++ b/gateway/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^5.2.1",
     "express-rate-limit": "^8.2.1",
     "http-proxy-middleware": "^3.0.5"
